force-app/main/default/objects/CBK_Adoption_FWK__c/CBK_Adoption_FWK__c.object-meta.xml
<CustomObject>
    <label>CBK Adoption FWK</label>
    <nameField>
        <displayFormat>Adp-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBK Adoptions FWK</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>