force-app/main/default/objects/CBK_Adoption_FWK__c/fields/CBK_ClassName__c.field-meta.xml
<CustomField>
    <fullName>CBK_ClassName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>