force-app/main/default/objects/CBK_Adoption_FWK__c/fields/CBK_FWK_Name__c.field-meta.xml
<CustomField>
    <fullName>CBK_FWK_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FWK Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>