force-app/main/default/objects/CBK_Adoption_FWK__c/fields/CBK_RelatedClass__c.field-meta.xml
<CustomField>
    <fullName>CBK_RelatedClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CBK Related FWK</label>
    <referenceTo>CBK_Adoption_FWK__c</referenceTo>
    <relationshipLabel>Related Class</relationshipLabel>
    <relationshipName>CBK_RelatedClass</relationshipName>
    <type>Lookup</type>
</CustomField>