force-app/main/default/objects/CBK_Adoption_FWK__c/recordTypes/ApexClass.recordType-meta.xml
<RecordType>
    <fullName>ApexClass</fullName>
    <active>true</active>
    <label>ApexClass</label>
</RecordType>