force-app/main/default/objects/CBK_Adoption_FWK__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CBK_Project__c</columns>
    <columns>CBK_FWK_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CBK_Adoption_FWK__c.Information</value>
    </filters>
    <label>All</label>
</ListView>